Try to determine why due date view is missing border line - not solved

--- a/src/style.css
+++ b/src/style.css
@@ -427,7 +427,6 @@ input[type="text"].category {
 .details,
 .show-due-date {
   padding-bottom: 1ch;
-  font-size: 1.9ch;
   font-family: "Happy Monkey";
 }
 
@@ -526,7 +525,6 @@ input[type="checkbox"].complete:checked::before {
   display: grid;
   grid-auto-rows: min-content;
   margin-right: 2ch;
-  margin-bottom: 2ch;
   width: 100%;
 }
 
@@ -647,13 +645,6 @@ input[type="checkbox"].complete:checked::before {
 
 .complete-view-delete {
   grid-column: 5;
-}
-
-.grid-cells > label {
-  width: 15ch;
-  font-family: "Happy Monkey";
-  font-size: 2.15ch;
-  margin-top: 1.5ch;
 }
 
 .grid-cells .priority-color {
